tests/ui/missing_string_attr.stderr
error: all variants must have "string" attribute
 --> tests/ui/missing_string_attr.rs:6:10
  |
6 | #[derive(SerializeLabeledStringEnum, DeserializeLabeledStringEnum)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SerializeLabeledStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: all variants must have "string" attribute
 --> tests/ui/missing_string_attr.rs:6:38
  |
6 | #[derive(SerializeLabeledStringEnum, DeserializeLabeledStringEnum)]
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserializeLabeledStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
